--- a/src/renderer/src/assets/styles/richtext.css
+++ b/src/renderer/src/assets/styles/richtext.css
@@ -445,7 +445,7 @@
 }
 
 .tiptap ul[data-type='taskList'] li {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
 }
 
@@ -466,7 +466,25 @@
 }
 
 /* Checked task item appearance */
-.tiptap ul[data-type='taskList'] li[data-checked='true'] > div {
+.tiptap ul[data-type='taskList'] li[data-checked='true'] > div > p {
+  color: var(--color-text-2);
+  text-decoration: line-through;
+}
+
+/* Prevent nested task lists from inheriting checked styles */
+.tiptap ul[data-type='taskList'] li[data-checked='true'] > div ul[data-type='taskList'] li > div > p {
+  color: inherit;
+  text-decoration: none;
+}
+
+.tiptap
+  ul[data-type='taskList']
+  li[data-checked='true']
+  > div
+  ul[data-type='taskList']
+  li[data-checked='true']
+  > div
+  > p {
   color: var(--color-text-2);
   text-decoration: line-through;
 }
